src/test/deca/context/invalid/SansObjet/DeclVar-Or-float-int-float.deca
// Description:
//    Declaration of a float variable using || operation between a int variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  5; 
    float y = 10.01; 
    float z = 5 || 10.01; 
}
